--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ button {
 
 
 
-.option {
+.option, .selector {
   border: 1px solid green;
   border-radius: .25rem;
   padding: .25rem;
@@ -95,6 +95,16 @@ button {
 }
 
 .option-item.selected {
+  background: green;
+  border-radius: .2rem;
+}
+
+
+
+.selector-left, .selector-right {
+  display: inline-block;
+  text-align: center;
+  width: 2rem;
   background: green;
   border-radius: .2rem;
 }
