Improve summary design
Add autoscroll to history controller

--- a/src/controllers/history/history.scss
+++ b/src/controllers/history/history.scss
@@ -24,4 +24,11 @@ $patternMargin: 1rem;
   height: $patternHeight;
   display: inline-block;
   margin: $patternMargin $patternMargin $patternMargin 0;
+  transform: translateZ(0);
+  animation: fadein .5s;
+}
+
+@keyframes fadein {
+    0%   {opacity: 0;}
+    100% {opacity: 1;}
 }
