--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,4 +1,20 @@
 $theme_dark:   #14171b;
 $theme_bright: #ffffff;
 
+$gutter: 2rem;
+
 $border: 1px dotted $theme_bright;
+
+
+// Media queries sizes
+$mq-small-min:   0px;
+$mq-medium-min:  480px;
+$mq-large-min:   768px;
+$mq-xlarge-min:  1024px;
+$mq-xxlarge-min: 1600px;
+
+$mq-small-max:   $mq-medium-min - 1px;
+$mq-medium-max:  $mq-large-min - 1px;
+$mq-large-max:   $mq-xlarge-min - 1px;
+$mq-xlarge-max:  $mq-xxlarge-min - 1px;
+$mq-xxlarge-max: 5120px;
