--- a/src/controllers/menu/menu.scss
+++ b/src/controllers/menu/menu.scss
@@ -2,11 +2,16 @@
 
 // Not much here... for now.
 .menu {
-  flex-direction: column;
-  justify-content: space-between;
+
 }
 
 .menu-title {
   margin: 0;
   text-shadow: 0 0 6px $theme_bright, 0 0 16px $theme_bright;
+}
+
+@media (orientation: landscape), (min-width: $mq-xlarge-min) {
+  // .view-bloc:first-child {
+  //   text-align: right;
+  // }
 }
