Improve menu screen

--- a/src/controllers/extender/extender.scss
+++ b/src/controllers/extender/extender.scss
@@ -32,3 +32,14 @@
     display: inherit;
   }
 }
+
+@media (orientation: landscape), (min-width: $mq-xlarge-min) {
+  .extender.small-only {
+    .extender-button {
+      display: none;
+    }
+    .extender-content {
+      display: inherit;
+    }
+  }
+}
