--- a/src/style.scss
+++ b/src/style.scss
@@ -25,7 +25,7 @@ a {
 }
 
 button {
-  @extend %unselectable;
+  @extend %button-feel;
   font-weight: 100;
   background: none;
   color: $theme_bright;
@@ -49,15 +49,15 @@ h1 {
 }
 
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 ::-moz-scrollbar {
-    display: none;
+  display: none;
 }
 
 *:focus {
-    outline: none;
+  outline: none;
 }
 
 .bloc {
