Improve desktop layout on Game

--- a/src/controllers/game/game.scss
+++ b/src/controllers/game/game.scss
@@ -12,3 +12,9 @@
     }
   }
 }
+
+@media (orientation: landscape), (min-width: $mq-xlarge-min) {
+  .game-layout-lock {
+    align-self: center;
+  }
+}
