--- a/src/controllers/menu/menu.scss
+++ b/src/controllers/menu/menu.scss
@@ -1,10 +1,5 @@
 @import "../../_variables.scss";
 
-// Not much here... for now.
-.menu {
-
-}
-
 .menu-title {
   margin: 0;
   text-shadow: 0 0 6px $theme_bright, 0 0 16px $theme_bright;
@@ -15,7 +10,7 @@
 }
 
 @media (orientation: landscape), (min-width: $mq-xlarge-min) {
-  .menu {
+  .menu-layout {
     align-items: center;
   }
 }
