Improve Summary screen

--- a/src/controllers/menu/menu.scss
+++ b/src/controllers/menu/menu.scss
@@ -13,7 +13,7 @@
 	display: block;
 	width: 100%;
 	max-width: 320px;
-	margin: auto;
+	margin: 1rem auto;
 }
 
 @media (orientation: landscape), (min-width: $mq-xlarge-min) {
