Add highlight text

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,8 +2,8 @@ $theme_dark:   #14171b;
 $theme_bright: #ffffff;
 
 $gutter: 2rem;
-
 $border: 1px dotted $theme_bright;
+$font_weight: 300;
 
 
 // Media queries sizes
