--- a/src/controllers/history/history.scss
+++ b/src/controllers/history/history.scss
@@ -42,9 +42,9 @@ $patternRatio:  100/120;
   display: inline-block;
   margin: $patternMargin 0;
   transform: translateZ(0);
-  animation: fadein .5s;
+  animation: expand .25s, fadein .5s linear;
   -webkit-transform: translateZ(0);
-  -webkit-animation: fadein .5s;
+  -webkit-animation: expand .25s, fadein .5s linear;
 
   & + svg {
     margin-left: $patternMargin;
@@ -53,12 +53,22 @@ $patternRatio:  100/120;
 
 @keyframes fadein {
     0%   {opacity: 0;}
+    50%  {opacity: 0;}
     100% {opacity: 1;}
 }
 
 @-webkit-keyframes fadein {
     0%   {opacity: 0;}
+    50%  {opacity: 0;}
     100% {opacity: 1;}
+}
+
+@keyframes expand {
+    0%   {width: 0;}
+}
+
+@-webkit-keyframes expand {
+    0%   {width: 0;}
 }
 
 @media (orientation: landscape), (min-width: $mq-xlarge-min) {
