--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,8 @@
-$theme_dark:   #14171b;
-$theme_bright: #ffffff;
+$theme_dark:    #14171b;
+$theme_bright:  #ffffff;
+$theme_success: #11aaff;
+$theme_error:   #ff0000;
+
 
 $gutter: 2rem;
 $border: 1px dotted $theme_bright;
