--- a/src/controllers/summary/summary.scss
+++ b/src/controllers/summary/summary.scss
@@ -1,6 +1,7 @@
 @import "../../_variables.scss";
 
-$duration: .5s;
+$summary_transition_duration: .5s;
+$summary_transition_delay:    .5s;
 
 .summary {
   position: fixed;
@@ -11,15 +12,13 @@ $duration: .5s;
   height: 0;
   overflow: hidden;
   background: $theme_dark;
-  opacity: 0;
   visibility: hidden;
-  transition: visibility 0s linear $duration, height $duration, opacity $duration/2 linear $duration/4;
+  transition: visibility 0s linear $summary_transition_duration, height $summary_transition_duration ease;
 
   &.active {
     visibility: visible;
     height: 100%;
-    opacity: 1;
-    transition: visibility 0s, height $duration, opacity $duration/2;
+    transition: visibility 0s, height $summary_transition_duration ease $summary_transition_delay;
   }
 
   // Hacks :-/
