Fix success color

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,6 @@
 $theme_dark:    #14171b;
 $theme_bright:  #ffffff;
-$theme_success: #11aaff;
+$theme_success: #116699;
 $theme_error:   #ff0000;
 
 
