--- a/src/style.scss
+++ b/src/style.scss
@@ -16,8 +16,14 @@
 }
 
 html, body {
-  margin: 0;
-  padding: 5%;
+  height: 100%;
+}
+body {
+  position: relative;
+  margin: 0 auto;
+  padding: $gutter;
+  max-width: 1200px;
+  box-sizing: border-box;
   background: $theme_dark;
   color: $theme_bright;
 }
@@ -95,7 +101,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Layout *********/
-
 .view  {
   display: flex;
   flex-direction: column;
