--- a/src/style.scss
+++ b/src/style.scss
@@ -28,6 +28,9 @@ body {
   color: $theme_bright;
   overscroll-behavior-y: none;
 }
+body.deepblack {
+  background-color: #000;
+}
 
 a {
   color: inherit;
