--- a/src/style.scss
+++ b/src/style.scss
@@ -115,6 +115,15 @@ table {
   display: none;
 }
 
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 /* Layout *********/
 .view  {
   display: flex;
