set English as default and handle relative urls

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,9 +3,9 @@
 @font-face {
   font-family: 'Roboto Mono';
   font-weight: $font_weight;
-  src: url('/assets/fonts/robotomono-light-webfont.woff2') format('woff2'),
-    url('/assets/fonts/robotomono-light-webfont.woff') format('woff'),
-    url('/assets/fonts/robotomono-light-webfont.ttf') format('truetype');
+  src: url('../assets/fonts/robotomono-light-webfont.woff2') format('woff2'),
+    url('../assets/fonts/robotomono-light-webfont.woff') format('woff'),
+    url('../assets/fonts/robotomono-light-webfont.ttf') format('truetype');
 }
 
 * {
