--- a/src/style.scss
+++ b/src/style.scss
@@ -165,6 +165,12 @@ table {
   }
 }
 
+.ui-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 @media (orientation: landscape), (min-width: $mq-xlarge-min) {
   .view {
     flex-direction: row;
